Fixed tooltip positioning and reflow and adjusted layout spacing. Also, added tooltip to New DVD button.

--- a/app/assets/stylesheets/dvds.scss
+++ b/app/assets/stylesheets/dvds.scss
@@ -38,3 +38,9 @@ video {
   display: inline-block;
   margin: 0 auto;
 }
+
+.dvds-list {
+  li {
+    margin-bottom: 20px;
+  }
+}
